test/commands/scan/tf-ecs-cluster/01-out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 3 resources against 1 policy ) ...
- required-container-insights / required-container-insights / (unknown) PASSED
Done
