test/commands/scan/tf-ecs-cluster/01-policy.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: required-container-insights
spec:
  rules:
    - name: required-container-insights
      match:
        any:
        - type: aws_ecs_cluster
      assert:
        all:
        - message: "Container insights should be enabled on ECS cluster"
          check:
            values:
              ~.setting: 
                name: containerInsights
                value: enabled
