test/commands/scan/tf-ecs-cluster/02-out.txt
Loading policies ...
Loading payload ...
Pre processing ...
Running ( evaluating 3 resources against 1 policy ) ...
- ecs-cluster-enable-logging / ecs-cluster-enable-logging / (unknown) PASSED
Done
